[workspace]
members = [
  "basic",
  # "diesel",
  "json",
  # "juniper",
  # "lines",
  "routing",
  "tls",
  "unix-socket",

  # The following members works only on nightly channel.
  # "async-await",
  # "git-server",
]

[patch.crates-io]
tsukuyomi = { git = "https://github.com/tsukuyomi-rs/tsukuyomi.git", branch = "master" }
