[package]
name = "example-json"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "json"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.3.0-dev"
futures = "0.1.21"
serde = { version = "1.0", features = ["derive"] }
http = "0.1.6"
