[package]
name = "example-juniper"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "juniper"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.2"
tsukuyomi-juniper = "0.1"
juniper = "0.9.0"
futures = "0.1.21"
failure = { version = "0.1", features = ["derive"] }
