[package]
name = "example-websocket"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "websocket"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.3.0-dev"
futures = "0.1.21"
http = "0.1.6"
failure = { version = "0.1.1", features = ["derive"] }
tokio-io = "0.1"
tokio-codec = "0.1.0"
base64 = "0.9.2"
sha1 = "0.6.0"

[dependencies.websocket]
version = "0.20.3"
default-features = false
features = ["async"]
