[package]
name = "example-websocket"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "websocket"
path = "src/main.rs"
doc = false

[dependencies]
tsukuyomi = "0.3.0-dev"
futures = "0.1.21"

tsukuyomi-websocket = { git = "https://github.com/tsukuyomi-rs/tsukuyomi-websocket.git" }
